--- a/app/src/main/res/drawable/shape_comment_checked.xml
+++ b/app/src/main/res/drawable/shape_comment_checked.xml
@@ -3,4 +3,7 @@
     <corners android:radius="4dp"/>
 
     <solid android:color="@color/white"/>
+
+    <stroke android:color="#b0b0b0"
+        android:width="1dp"/>
 </shape>
