--- a/app/src/main/res/layout/activity_correct_work.xml
+++ b/app/src/main/res/layout/activity_correct_work.xml
@@ -6,125 +6,194 @@
 
     <include layout="@layout/thetopview_new" />
 
-    <include layout="@layout/include_work_correnct_header"/>
-
-    <TextView
-        android:id="@+id/work_detail_content"
+    <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:background="@color/white"/>
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/work_detail_recycler_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingLeft="@dimen/itemMargin"
-        android:paddingRight="@dimen/itemMargin">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/work_detail_recycler_video"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingLeft="@dimen/itemMargin"
-        android:paddingRight="@dimen/itemMargin">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <include layout="@layout/include_voice_play" />
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="12dp"
-        android:text="作业评语"
-        android:textSize="17sp"
-        android:textColor="@color/text_black_h2"
-        />
-    <View
-        style="@style/split_line_style_1dp"
-        />
-
-
-    <com.histudent.jwsoft.histudent.widget.FlowLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.histudent.jwsoft.histudent.widget.FlowLayout>
-
-
-    <include layout="@layout/include_voice_play" />
-
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/_f8f8f8">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="4"
-            android:textSize="15sp"
-            android:textColorHint="@color/text_gray_h1"
-            />
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.histudent.jwsoft.histudent.commen.view.IconView
-                android:id="@+id/control_record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:clickable="true"
-                android:text="@string/icon_microphone"
-                android:textColor="@color/icon_color"
-                android:textSize="20sp" />
+            <include layout="@layout/include_work_correct_header" />
 
-            <com.histudent.jwsoft.histudent.commen.view.IconView
-                android:id="@+id/control_emotion"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="30dp"
-                android:clickable="true"
-                android:gravity="center"
-                android:onClick="onClick"
-                android:text="@string/icon_face"
-                android:textColor="@color/icon_color"
-                android:textSize="@dimen/text_size_20" />
+            <View style="@style/split_line_style_1dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/work_detail_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="12dp"
+                    android:background="@color/white" />
+
+
+                <FrameLayout
+                    android:id="@+id/work_detail_imgs"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
+
+                    <ImageView
+                        android:id="@+id/work_detail_photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="fitXY" />
+
+                    <TextView
+                        android:id="@+id/work_detail_photo_num"
+                        android:layout_width="48dp"
+                        android:layout_height="28dp"
+                        android:layout_gravity="bottom|right"
+                        android:background="@color/_11ffffff"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                </FrameLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/work_detail_recycler_video"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:paddingLeft="@dimen/itemMargin"
+                    android:paddingRight="@dimen/itemMargin">
+
+                </android.support.v7.widget.RecyclerView>
+
+                <include layout="@layout/include_voice_play" />
+            </LinearLayout>
+
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="12dp"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:paddingLeft="12dp"
+                android:text="作业评语"
+                android:textColor="@color/text_black_h2"
+                android:textSize="17sp" />
+
+            <View style="@style/split_line_style_1dp" />
+
+            <LinearLayout
+                android:id="@+id/write_comment"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right|center_vertical"
-                android:text="0/150"
-                android:textColor="@color/text_gray_h1"
-                android:textSize="12sp"/>
+                android:background="@color/white"
+                android:orientation="vertical">
 
+                <com.histudent.jwsoft.histudent.widget.FlowLayout
+                    android:id="@+id/layout_flow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </com.histudent.jwsoft.histudent.widget.FlowLayout>
+
+
+                <include layout="@layout/include_voice_play" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:background="@color/_f8f8f8"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/correct_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:gravity="top|left"
+                        android:hint="请填写本次作业的评语"
+                        android:minLines="8"
+                        android:padding="12dp"
+                        android:textColorHint="@color/text_gray_h1"
+                        android:textSize="15sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="12dp"
+                        android:orientation="horizontal">
+
+                        <com.histudent.jwsoft.histudent.commen.view.IconView
+                            android:id="@+id/control_record"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:clickable="true"
+                            android:text="@string/icon_microphone"
+                            android:textColor="@color/icon_color"
+                            android:textSize="20sp" />
+
+                        <com.histudent.jwsoft.histudent.commen.view.IconView
+                            android:id="@+id/control_emotion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="30dp"
+                            android:clickable="true"
+                            android:gravity="center"
+                            android:onClick="onClick"
+                            android:text="@string/icon_face"
+                            android:textColor="@color/icon_color"
+                            android:textSize="@dimen/text_size_20" />
+
+                        <TextView
+                            android:id="@+id/correct_content_num"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right|center_vertical"
+                            android:text="0/150"
+                            android:textColor="@color/text_gray_h1"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/comment_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="@color/text_gray_h1"
+                    android:textSize="15sp" />
+
+                <View style="@style/split_line_style_1dp" />
+
+
+            </LinearLayout>
         </LinearLayout>
+    </ScrollView>
 
 
-
-    </LinearLayout>
-
-
-
+    <!--表情键盘-->
+    <FrameLayout
+        android:id="@+id/fl_emotionview_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp" />
 
 
 </LinearLayout>
