--- a/app/src/main/res/layout/activity_work_detail_teacher.xml
+++ b/app/src/main/res/layout/activity_work_detail_teacher.xml
@@ -42,6 +42,7 @@
                         android:layout_marginTop="12dp" />
 
                     <FrameLayout
+                        android:id="@+id/work_detail_imgs"
                         android:layout_width="match_parent"
                         android:layout_height="200dp">
 
@@ -91,7 +92,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewpager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="200dp">
 
                 </android.support.v4.view.ViewPager>
 
