--- a/app/src/main/res/layout/include_work_correct_header.xml
+++ b/app/src/main/res/layout/include_work_correct_header.xml
@@ -6,6 +6,7 @@
     android:background="@color/white">
 
     <ImageView
+        android:id="@+id/work_complete_avatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical"
@@ -20,6 +21,7 @@
         android:layout_marginLeft="12dp">
 
         <TextView
+            android:id="@+id/work_complete_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="王二妮"
@@ -28,6 +30,7 @@
             />
 
         <TextView
+            android:id="@+id/work_complete_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
