--- a/app/src/main/res/layout/item_homework_select_receiver.xml
+++ b/app/src/main/res/layout/item_homework_select_receiver.xml
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/dp12"
-                android:text="@string/icon_down"
+                android:text="@string/icon_up"
                 android:textColor="@color/_bbbbbb"
                 android:textSize="@dimen/sp10"/>
 
