--- a/app/src/main/res/layout/activity_work_detail_teacher.xml
+++ b/app/src/main/res/layout/activity_work_detail_teacher.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/white">
+        >
 
         <ScrollView
             android:layout_width="match_parent"
@@ -22,7 +22,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <include layout="@layout/include_work_detail_header" />
 
@@ -31,7 +32,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@color/white">
 
                     <TextView
                         android:id="@+id/work_detail_content"
