--- a/app/src/main/res/layout/activity_work_undone.xml
+++ b/app/src/main/res/layout/activity_work_undone.xml
@@ -76,6 +76,7 @@
 
 
     <LinearLayout
+        android:id="@+id/undone_control"
         android:layout_width="match_parent"
         android:layout_height="116dp"
         android:orientation="vertical"
