--- a/app/src/main/res/layout/activity_correct_work.xml
+++ b/app/src/main/res/layout/activity_correct_work.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -70,7 +71,10 @@
 
                 </android.support.v7.widget.RecyclerView>
 
-                <include layout="@layout/include_voice_play" />
+                <include
+                    android:id="@+id/detail_audio"
+                    layout="@layout/include_voice_play"
+                    />
             </LinearLayout>
 
 
@@ -90,7 +94,8 @@
             <LinearLayout
                 android:id="@+id/write_comment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:background="@color/white"
                 android:orientation="vertical">
 
@@ -102,7 +107,9 @@
                 </com.histudent.jwsoft.histudent.widget.FlowLayout>
 
 
-                <include layout="@layout/include_voice_play" />
+                <include
+                    android:id="@+id/comment_audio"
+                    layout="@layout/include_voice_play" />
 
 
                 <LinearLayout
@@ -127,14 +134,14 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         android:layout_margin="12dp"
-                        android:orientation="horizontal">
+                        >
 
                         <com.histudent.jwsoft.histudent.commen.view.IconView
                             android:id="@+id/control_record"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="30dp"
                             android:clickable="true"
                             android:text="@string/icon_microphone"
                             android:textColor="@color/icon_color"
@@ -165,12 +172,27 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/correct_finish"
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/bg_btn_green"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:text="去完成"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/comment_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
