--- a/app/src/main/res/layout/activity_homework_add_member.xml
+++ b/app/src/main/res/layout/activity_homework_add_member.xml
@@ -6,7 +6,7 @@
     android:background="@color/_EFF0F2"
     android:orientation="vertical">
 
-    <include layout="@layout/thetopview_new"/>
+    <include layout="@layout/common_top_layout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
