--- a/app/src/main/res/layout/activity_homework_already_publish.xml
+++ b/app/src/main/res/layout/activity_homework_already_publish.xml
@@ -6,7 +6,7 @@
     android:background="@color/_EFF0F2"
     android:orientation="vertical">
 
-    <include layout="@layout/thetopview_new"/>
+    <include layout="@layout/common_top_layout"/>
 
     <LinearLayout
         android:id="@+id/ll_teacher_layout"
@@ -82,7 +82,8 @@
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/srl_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_homework"
