--- a/app/src/main/res/layout/activity_homework_receiver_person_detail.xml
+++ b/app/src/main/res/layout/activity_homework_receiver_person_detail.xml
@@ -6,7 +6,7 @@
     android:background="@color/_EFF0F2"
     android:orientation="vertical">
 
-    <include layout="@layout/thetopview_new"/>
+    <include layout="@layout/common_top_layout"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_receiver_person_detail"
