--- a/app/src/main/res/layout/activity_homework_select_receiver_person.xml
+++ b/app/src/main/res/layout/activity_homework_select_receiver_person.xml
@@ -6,11 +6,12 @@
     android:background="@color/_EFF0F2"
     android:orientation="vertical">
 
-    <include layout="@layout/thetopview_new"/>
+    <include layout="@layout/common_top_layout"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_select_group"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
 
 </LinearLayout>
