--- a/app/src/main/res/layout/item_homework_list_sub_content.xml
+++ b/app/src/main/res/layout/item_homework_list_sub_content.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@android:color/white"
+    android:background="@drawable/selector_press_style_1"
     android:gravity="center_vertical">
 
 
