--- a/app/src/main/res/layout/item_homework_select_receiver.xml
+++ b/app/src/main/res/layout/item_homework_select_receiver.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/selector_press_style_1"
     android:gravity="center_vertical"
     android:orientation="vertical">
 
@@ -19,9 +19,9 @@
             android:id="@+id/ll_receive_select_class_check"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingRight="@dimen/dp17">
+            android:orientation="horizontal">
 
             <com.histudent.jwsoft.histudent.commen.view.IconView
                 android:id="@+id/iv_receive_select_class_check"
@@ -32,26 +32,29 @@
                 android:textColor="@color/_cccccc"
                 android:textSize="@dimen/sp18"/>
 
+            <ImageView
+                android:id="@+id/iv_receive_select_class_icon"
+                android:layout_width="@dimen/dp50"
+                android:layout_height="@dimen/dp50"
+                android:layout_marginLeft="@dimen/dp17"
+                android:src="@color/blue_color"/>
+
+            <TextView
+                android:id="@+id/tv_receive_class_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp16"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:lines="1"
+                android:maxEms="14"
+                android:text="业庙中心小学二年级3班"
+                android:textColor="@color/_333333"
+                android:textSize="@dimen/sp15"/>
+
+
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_receive_select_class_icon"
-            android:layout_width="@dimen/dp50"
-            android:layout_height="@dimen/dp50"
-            android:src="@color/blue_color"/>
-
-        <TextView
-            android:id="@+id/tv_receive_class_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp16"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:lines="1"
-            android:maxEms="14"
-            android:text="业庙中心小学二年级3班"
-            android:textColor="@color/_333333"
-            android:textSize="@dimen/sp15"/>
 
         <LinearLayout
             android:id="@+id/ll_receive_class_expand"
