--- a/app/src/main/res/layout/activity_create_homework.xml
+++ b/app/src/main/res/layout/activity_create_homework.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:id="@+id/layout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <include layout="@layout/thetopview_new" />
+    <include layout="@layout/thetopview_new"/>
 
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:fillViewport="true"
         android:background="@color/bg_color"
         android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="vertical">
 
 
@@ -25,35 +26,32 @@
                 android:id="@+id/work_subject_layout"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:paddingLeft="@dimen/itemMargin"
-                android:paddingRight="@dimen/itemMargin"
-                android:gravity="center_vertical"
                 android:background="@color/white"
-                android:orientation="horizontal">
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/itemMargin"
+                android:paddingRight="@dimen/itemMargin">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="科目"
                     android:textColor="@color/text_black_h2"
-                    android:textSize="15sp"
-                    />
+                    android:textSize="15sp"/>
 
                 <TextView
                     android:id="@+id/work_subject"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginRight="8dp"
-                    android:text=""
-                    android:maxLines="1"
+                    android:layout_weight="1"
                     android:ellipsize="end"
-                    android:hint="请选择科目"
                     android:gravity="right|center_vertical"
+                    android:hint="请选择科目"
+                    android:maxLines="1"
+                    android:text=""
                     android:textColor="@color/text_gray_h1"
-                    android:textSize="15sp"
-
-                    />
+                    android:textSize="15sp"/>
 
                 <com.histudent.jwsoft.histudent.commen.view.IconView
                     android:layout_width="wrap_content"
@@ -61,51 +59,45 @@
                     android:layout_gravity="center_vertical"
                     android:text="@string/icon_arrowright"
                     android:textColor="@color/icon_color"
-                    android:textSize="12sp"
-                    />
-
+                    android:textSize="12sp"/>
 
             </LinearLayout>
 
 
             <View
-                style="@style/split_line_style_withLeftMargin"
-                />
+                style="@style/split_line_style_withLeftMargin"/>
 
 
             <LinearLayout
                 android:id="@+id/work_receiver_layout"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:paddingLeft="@dimen/itemMargin"
-                android:paddingRight="@dimen/itemMargin"
-                android:gravity="center_vertical"
                 android:background="@color/white"
-                android:orientation="horizontal">
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/itemMargin"
+                android:paddingRight="@dimen/itemMargin">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="接收人"
                     android:textColor="@color/text_black_h2"
-                    android:textSize="15sp"
-                    />
+                    android:textSize="15sp"/>
 
                 <TextView
                     android:id="@+id/work_receiver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginRight="8dp"
-                    android:text=""
-                    android:maxLines="1"
-                    android:hint="请选择接收人"
+                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:gravity="right|center_vertical"
+                    android:hint="请选择接收人"
+                    android:maxLines="1"
+                    android:text=""
                     android:textColor="@color/text_gray_h1"
-                    android:textSize="15sp"
-
-                    />
+                    android:textSize="15sp"/>
 
                 <com.histudent.jwsoft.histudent.commen.view.IconView
                     android:layout_width="wrap_content"
@@ -113,60 +105,51 @@
                     android:layout_gravity="center_vertical"
                     android:text="@string/icon_arrowright"
                     android:textColor="@color/icon_color"
-                    android:textSize="12sp"
-                    />
+                    android:textSize="12sp"/>
 
 
             </LinearLayout>
 
 
             <View
-                style="@style/split_line_style_withLeftMargin"
-                />
+                style="@style/split_line_style_withLeftMargin"/>
 
             <EditText
                 android:id="@+id/work_content"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:background="@color/white"
-                android:padding="12dp"
-                android:hint="输入你要布置的作业内容"
                 android:gravity="top|left"
+                android:hint="输入你要布置的作业内容"
+                android:padding="12dp"
                 android:textColorHint="@color/text_gray_h1"
-                android:textSize="15sp"
-                />
+                android:textSize="15sp"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/itemMargin"
-                android:paddingRight="@dimen/itemMargin"
                 android:background="@color/white"
-                >
-
-            </android.support.v7.widget.RecyclerView>
+                android:paddingLeft="@dimen/itemMargin"
+                android:paddingRight="@dimen/itemMargin"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_video"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:paddingLeft="@dimen/itemMargin"
-                android:paddingRight="@dimen/itemMargin"
-                android:background="@color/white">
-
-
-            </android.support.v7.widget.RecyclerView>
-
+                android:paddingRight="@dimen/itemMargin"/>
 
 
             <include
-                layout="@layout/include_voice_play"
-                />
+                layout="@layout/include_voice_play"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
                 android:background="@color/white"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -210,8 +193,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/icon_starhalf"
                     android:textColor="@color/_bbbbbb"
-                    android:textSize="12dp"
-                    />
+                    android:textSize="12dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -219,15 +201,12 @@
                     android:layout_marginLeft="8dp"
                     android:text="开启在线提交后，学生需要提交语言、图片或文字等反馈."
                     android:textColor="@color/_bbbbbb"
-                    android:textSize="12dp"
-                    />
+                    android:textSize="12dp"/>
 
             </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
-
-
 
 
     <FrameLayout
@@ -249,9 +228,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                android:text="@string/icon_img"
+                android:text="@string/icon_camera"
                 android:textColor="@color/icon_color"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
             <com.histudent.jwsoft.histudent.commen.view.IconView
                 android:id="@+id/control_record"
@@ -261,7 +240,7 @@
                 android:clickable="true"
                 android:text="@string/icon_microphone"
                 android:textColor="@color/icon_color"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
             <com.histudent.jwsoft.histudent.commen.view.IconView
                 android:id="@+id/control_emotion"
@@ -273,7 +252,7 @@
                 android:onClick="onClick"
                 android:text="@string/icon_face"
                 android:textColor="@color/icon_color"
-                android:textSize="@dimen/text_size_20" />
+                android:textSize="@dimen/text_size_20"/>
 
         </LinearLayout>
     </FrameLayout>
@@ -284,7 +263,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp" />
+        android:layout_marginRight="1dp"/>
 
 
 </LinearLayout>
