--- a/app/src/main/res/layout/item_work_no_complete.xml
+++ b/app/src/main/res/layout/item_work_no_complete.xml
@@ -19,7 +19,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
-            android:src="@drawable/default_person" />
+            android:src="@drawable/avatar_def" />
 
         <TextView
             android:id="@+id/item_no_complete_name"
