--- a/app/src/main/res/layout/activity_correct_work.xml
+++ b/app/src/main/res/layout/activity_correct_work.xml
@@ -23,6 +23,7 @@
             <View style="@style/split_line_style_1dp" />
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -42,7 +43,8 @@
                 <FrameLayout
                     android:id="@+id/work_detail_imgs"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <ImageView
                         android:id="@+id/work_detail_photo"
@@ -66,6 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:visibility="gone"
                     android:paddingLeft="@dimen/itemMargin"
                     android:paddingRight="@dimen/itemMargin">
 
@@ -74,8 +77,11 @@
                 <include
                     android:id="@+id/detail_audio"
                     layout="@layout/include_voice_play"
+                    android:visibility="gone"
                     />
             </LinearLayout>
+
+
 
 
             <TextView
@@ -182,26 +188,68 @@
                     android:background="@drawable/bg_btn_green"
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="12dp"
-                    android:text="去完成"
+                    android:text="完成"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     />
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/comment_content"
+                android:id="@+id/comment_content_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@color/white">
 
                 <TextView
+                    android:id="@+id/comment_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/text_gray_h1"
+                    android:layout_margin="12dp"
                     android:textSize="15sp" />
 
+
+
+
+                <include
+                    android:id="@+id/comment_audio"
+                    layout="@layout/include_voice_play"
+                    android:visibility="gone"
+                    />
+
                 <View style="@style/split_line_style_1dp" />
+
+                <LinearLayout
+                    android:id="@+id/modify_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:background="@color/white"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
+                    >
+
+                    <com.histudent.jwsoft.histudent.commen.view.IconView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/icon_addnews"
+                        />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="修改评语"
+                        android:textSize="15sp"
+                        android:textColor="@color/_666666"
+                        android:layout_marginLeft="8dp"/>
+
+
+
+                </LinearLayout>
 
 
             </LinearLayout>
