--- a/app/src/main/res/layout/activity_work_finish.xml
+++ b/app/src/main/res/layout/activity_work_finish.xml
@@ -23,7 +23,7 @@
             <EditText
                 android:id="@+id/work_content"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="200dp"
                 android:background="@color/white"
                 android:gravity="top|left"
                 android:hint="根据老师的要求来完成作业"
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                android:text="@string/icon_img"
+                android:text="@string/icon_camera"
                 android:textColor="@color/icon_color"
                 android:textSize="20sp" />
 
