--- a/app/src/main/res/layout/item_layout_empty.xml
+++ b/app/src/main/res/layout/item_layout_empty.xml
@@ -14,6 +14,7 @@
         android:src="@drawable/net_error_fail" />
 
     <TextView
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
